@startuml

!startsub IReadOnlyParameterSetCollection
namespace score::config_management::config_daemon::data_model {
abstract class IReadOnlyParameterSetCollection {
    + {abstract} GetParameterSet(set_name : const std::string) : Result<score::cpp::pmr::string>
    + {abstract} GetParameterFromSet(set_name : const score::cpp::string_view,parameter_name : const score::cpp::string_view) : Result<json::Any>
}
}
!endsub

!startsub IParameterSetCollection
namespace score::config_management::config_daemon::data_model {
abstract class IParameterSetCollection {
    + {abstract} Insert(set_name : const score::cpp::string_view , parameter_name : const score::cpp::string_view , parameter_value : json::Any&&) : Result<void>
    + {abstract} UpdateParameterSet(set_name : const score::cpp::string_view, set : const score::cpp::string_view) : Result<void>
    + {abstract} SetCalibratable(set_name : const score::cpp::string_view, is_calibratable : const bool) : bool
    + {abstract} GetParameterSetQualifier(set_name : const score::cpp::string_view ) : score::Result<score::config_management::config_daemon::ParameterSetQualifier>
    + {abstract} SetParameterSetQualifier(\n\
            set_name : const score::cpp::string_view,\n\
            qualifier : const score::config_management::config_daemon::ParameterSetQualifier): Result<void>
    --
    Responsibility: This class encapsulates the collection of ParameterSets in detailed design.
}
}
!endsub
IReadOnlyParameterSetCollection <|-down- IParameterSetCollection

!startsub ParameterSetCollection
namespace score::config_management::config_daemon::data_model {

class ParameterSetCollection {
    + Insert(set_name : const score::cpp::string_view , parameter_name : const score::cpp::string_view , parameter_value : json::Any&&) : Result<void>
    + GetParameterSet(set_name : const std::string): Result<score::cpp::pmr::string>
    + GetParameterFromSet(set_name : const score::cpp::string_view, parameter_name : const score::cpp::string_view) : Result<json::Any>
    + UpdateParameterSet(set_name : const score::cpp::string_view, set : const score::cpp::string_view ) : Result<void>
    + SetCalibratable(set_name : const score::cpp::string_view , is_calibratable : const bool) : bool
    + GetParameterSetQualifier(set_name : const score::cpp::string_view ) : score::Result<score::config_management::config_daemon::ParameterSetQualifier>
    + SetParameterSetQualifier(\n\
            set_name : const score::cpp::string_view ,\n\
            qualifier : const score::config_management::config_daemon::ParameterSetQualifier ): Result<void>
    --
    - mutex_ : std::mutex
    - parameter_sets_ : std::unordered_map<score::cpp::pmr::string, std::shared_ptr<ParameterSet>>
}
ParameterSetCollection o-down- ParameterSet
}
IParameterSetCollection <|-down- ParameterSetCollection
!endsub

!startsub ParameterSet
namespace score::config_management::config_daemon::data_model {
class ParameterSet {
    + ParameterSet(json_writer : std::unique_ptr<json::IJsonWriter>)
    + GetParameterSetAsString() : Result<score::cpp::pmr::string>
    + Add(parameter_name : const score::cpp::string_view, parameter_value : json::Any&&) : Result<void>
    + Update(parameters : json::Object&&) : Result<void>
    + SetCalibratable(is_calibratable : const bool) : void
    + SetQualifier(qualifier : const score::config_management::config_daemon::ParameterSetQualifier) : void
    + GetQualifier() : score::config_management::config_daemon::ParameterSetQualifier
    + GetParameter(parameter_name : const score::cpp::string_view) : Result<json::Any>
    --
    - data_ : std::unordered_map<score::cpp::pmr::string, Parameter>
    - json_writer_ : std::unique_ptr<json::IJsonWriter>
    - qualifier_ : score::config_management::config_daemon::ParameterSetQualifier
    - is_calibratable_ : bool
    --
    Responsibility: This class encapsulates the idea of ParameterSet in detailed design
}
ParameterSet o-down- Parameter
}
ParameterSet o-down- score::config_management::config_daemon::ParameterSetQualifier
!endsub

!startsub Parameter
namespace score::config_management::config_daemon::data_model {
class Parameter{
    + GetValue(): const json::Any&
    + SetValue(value : json::Any&&): void
    --
    - value_ : json::Any
    --
    Responsibility: This class encapsulates the idea of Parameter in detailed design.
}
}
!endsub

!startsub ParameterSetQualifier
namespace score::config_management::config_daemon {
enum ParameterSetQualifier {
    kUnqualified
    kQualified
    kDefault
    kModified
}
}
!endsub

@enduml
